Condensed alot of code. Fixed li issue on firefox.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     --padding: 15px;
 }
 
-/* Test */
 * {
     margin: 0;
     padding: 0;
@@ -12,13 +11,11 @@ body {
     font-family: "Poppins", Helvetica, Arial, sans-serif;
 }
 
-h1 {
-    display: inline;
-}
-
-header > ul >li {
+header>h1 {
+    line-height: 1.35;
     text-align: right;
     font-size: 10vw;
+    padding-right: 2%;
 }
 
 header > p {
@@ -69,6 +66,9 @@ a {
     margin-left: var(--padding);
 }
 
+.card h1 {
+    display: inline;
+}
 .card:hover {
     box-shadow: 2px 8px 45px rgba(0, 0, 0, .15);
     transform: translate3D(0, -2px, 0);
@@ -95,6 +95,7 @@ a {
     transform: skewY(-12deg);
     transform-origin: 0;
     background: linear-gradient( 150deg, #53f 15%, #05d5ff 70%, #a6ffcb 94%);
+    transition: all 0.5s;
 }
 
 .stripe :nth-child(1) {
@@ -114,23 +115,14 @@ a {
     background: #1fa2ff;
 }
 
-/* Handles transition from small to big screens */
-@media screen and (min-width: 600px) {
-    header > ul {
-        margin-top: 0%; 
-        transition: all 0.5s;
-    }
-}
-
 @media screen and (max-width: 600px) {
-    header > ul >li {
-        text-align: center;
-        font-size: 13vw;
-        
-    }
-
-    header > ul {
-        margin-top: 15%; 
+    header>h1 {
         transition: all 0.5s;
+        text-align: center;
+        padding-top: 15%;
+        font-size: 13vw;
+    }
+    .stripe {
+        margin-top: 15%;
     }
 }
